@@ -13,6 +13,7 @@ Cacti CHANGELOG
 -bug#0000925: Support for host_* variables in the legend
 -bug#0000957: Script Server Output's Beginning/Trailing Data During "Include" Causing a Synchronization Issue
 -bug#0000958: Slope Mode is Not Selectable  
+-bug#0000959: Add Alarming When Poller Output Table is Not Empty 
 -bug: ss_sql.php was never tested and causes the script server to crash.
 -bug: In an effort to make the current version of Cacti supportable, add Timeshifter.  Thanks Gandolf!
 -bug: Allow query_ and host_ substitution in COMMENT and CDEF's.
